# seds_server

./: Cargo.toml  Justfile  README.md
.devcontainer/: Dockerfile  devcontainer.json
frontend/patient-summary-frontend/: deno.json  fresh.gen.ts
frontend/patient-summary-frontend/components/: CardLayout.tsx  MainContent.tsx  MapNavigator.tsx  SelectorButton.tsx  SideBar.tsx  TableRecord.tsx
frontend/patient-summary-frontend/islands/: ConditionSelector.tsx  DiagnosisSelector.tsx  Diagram.tsx  NoteList.tsx  ObservationSelector.tsx  PatientViewer.tsx  StudySelector.tsx  SummaryMainContent.tsx  SummarySideBar.tsx
frontend/patient-summary-frontend/models/: careplan.ts  encounter.ts  patient.ts  procedure.ts  questionnaire.ts  shared.ts  summary.ts
frontend/patient-summary-frontend/routes/: _app.tsx
frontend/patient-summary-frontend/routes/api/advice/: index.ts
frontend/patient-summary-frontend/routes/api/notes/[page]/: [size].ts
frontend/patient-summary-frontend/routes/api/patient_ids/: index.ts
frontend/patient-summary-frontend/routes/api/patientsummary/: [patientId].ts
frontend/patient-summary-frontend/routes/patientsummary/: index.tsx
frontend/patient-summary-frontend/routes/patientsummary/demo/: index.tsx
frontend/patient-summary-frontend/routes/soapnotes/: index.tsx
frontend/patient-summary-frontend/signals/: patientSummary.ts
frontend/patient-summary-frontend/utils/: formatter.ts
libs/common/: Cargo.toml
libs/config/: Cargo.toml
libs/config/src/: lib.rs  loader.rs  setting.rs  settings.rs
libs/event_sourcing/: Cargo.toml
libs/governance/: Cargo.toml
libs/messaging/: Cargo.toml
libs/oauth2/: Cargo.toml
libs/oauth2/src/: client.rs  error.rs  lib.rs  test.html  types.rs
libs/oauth2/src/epic/: client.rs  client.rs.backup  config.rs  config.rs.backup  error.rs  error.rs.backup  mod.rs
libs/oauth2/src/tests/: client_tests.rs
libs/observability/: Cargo.toml
libs/performance/: Cargo.toml
libs/resilience/: Cargo.toml
libs/security/: Cargo.toml
libs/security/src/: oauth2.rs  oauth2_client.rs
services/api-gateway/: .env  Cargo.toml
services/api-gateway copy/: Cargo.toml
services/api-gateway copy/src/: config.rs  di.rs  main.rs  observability.rs  routes.rs
services/api-gateway copy/src/features/auth/: login.rs
services/api-gateway/config/: default.yaml  private_key.pem  privatekey.pem  public_cert.pem  publickey509.pem
services/api-gateway/src/: config.rs  di.rs  main.rs  observability.rs  resilience.rs  routes copy.rs  routes.rs
services/api-gateway/src/features/: mod.rs
services/api-gateway/src/features/auth/: callback.rs  login.rs  mod.rs  routes.rs
services/api-gateway/src/features/patientsummary/: handlers.rs  routes.rs
services/api-gateway/src/routes/: health.rs  jwks.rs  mod.rs  proxy.rs
services/patient-summary-agent/: config.py  main.py  requirements.txt
services/patient-summary-agent/app/: main.py  model.py
services/patient-summary-agent/app/prompts/: advice_prompt.py  soap_prompt.py
services/patient-summary-agent/app/usecases/: advice_usecase.py  csv_usecase.py  soap_notes_usecase.py
services/seds-service/: Cargo.toml
services/workflow-service/: Cargo.toml
