[package]
name = "oauth2_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
oauth2 = { version = "5"}
reqwest = { version = "0.12.15", features = ["json", "rustls-tls","reqwest-blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
anyhow = "1.0"
thiserror = "2.0.12"
config_lib = { path = "../config" }