[package]
name = "oauth2_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
oauth2 = { version = "5", features = ["reqwest"]  }
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
anyhow = "1.0"
jsonwebtoken = "9"
thiserror = "2.0.12"
config_lib = { path = "../config" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = "1.16.0"