[package]
name = "api-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { path = "../../libs/config" }
axum = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
axum-sessions = "0.6.1"   # để lưu state & token vào cookie/session
dotenv = "0.15.0"
