[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
axum-macros = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.0", features = ["v4"] }
oauth2_lib = { path = "../../libs/oauth2" }
config_lib = { path = "../../libs/config" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-sessions = "0.14.0"
reqwest = { version = "0.12.15", features = ["json","rustls-tls"] }
anyhow = "1.0"
time = "0.3.41"
dotenvy = "0.15"
url = "2.5.4"
oauth2 = { version = "5", features = ["reqwest-blocking"]  }